tests/error_messages/error_messages.exp
Error ----------------------------------------------------------- errors.js:1:12

Error: errors.js:1
  1: if (typeof define === 'function' && define.amd) { }
                ^^^^^^ Cannot resolve name `define`.


Found 1 error
